--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# ShadowGate MUD lib #
+# Sundering Shadows MUD lib #
 
 This is LPC code repository. You'll need fluffos (https://www.fluffos.info/) and world files to utilize it.
 
