--- a/d/newbie/ooc/faq
+++ b/d/newbie/ooc/faq
@@ -143,7 +143,7 @@ Basically this is reflecting, the more you run around and the more you fight, th
 
 First, you can type : heal <your name> and try to use a natural ability that all players have to heal a few of you lost hps back. You can do this as much as you like but it takes time. Second, many of the major cities in Shadowgate have healers who, for a fee in gold, will provide healing services and sell healing potions. Third, certain players due to their class, will have healing spells or abilities. The regeneration feat also allows players to gain back their hp over time.
 
-Lastly, some items that you may find within the Shadowgate world have the ability to heal. The most common would be healing potions that most healers will sell, for varying prices.
+Lastly, some items that you may find within the Sundering Shadows world have the ability to heal. The most common would be healing potions that most healers will sell, for varying prices.
 
 19) Ummm...a lot of the stuff I have been picking up is junk. Should I just leave this stuff on the ground?
 
